--- a/lit.bib
+++ b/lit.bib
@@ -1543,8 +1543,18 @@
   number = {12-13}
 }
 
+@UNPUBLISHED{HS14,
+  author = {Schwichtenberg, H.},
+  title = {Minimal Logic for Computable Functionals},
+  note = {\url{http://www.mathematik.uni-muenchen.de/~logik/minlog/cronfiles/mlcf.pdf}
+	(Last Accessed 08/08/14)},
+  year = {2014},
+  owner = {andylawrence},
+  timestamp = {2014.08.08}
+}
+
 @MISC{MinlogRef,
-  author = {Helmut Schwichtenberg},
+  author = {Schwichtenberg, H.},
   title = {Minlog Reference Manual},
   howpublished = {\url{http://www.mathematik.uni-muenchen.de/~logik/minlog/cronfiles/ref.pdf}},
   year = {2014},
