--- a/Introduction.tex
+++ b/Introduction.tex
@@ -101,5 +101,15 @@ Our second set of results is in regard to the formal specification and verificat
 
 \end{comment}
 
+\vspace{5cm}
 
-
+\section{Hardware}
+The following computer was used for all benchmarks and tests run as part of this thesis:
+\begin{center}
+\begin{tabular}{| l | c |} \hline
+Operating system: & Ubuntu 14.04 LTS  \\ \hline
+Processor: & Intel(R) Core(TM) i7 64 bit CPU with 8 cores at 2.93GHz  \\ \hline 
+Memory: & 8 GBs 1333 MHz DDR2 RAM \\ \hline
+Hard disk: &  750GB 7200 RPM  SATA\\  \hline 
+\end{tabular}
+\end{center}
